# fastapi-paseto-auth

./: 404.html  CHANGELOG.md  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
advanced-usage/additional-claims/: index.html
advanced-usage/bigger-app/: index.html
advanced-usage/expiry_time/: index.html
advanced-usage/generate-docs/: index.html
advanced-usage/purpose/: index.html
api-doc/: index.html
configuration/denylist/: index.html
configuration/general/: index.html
configuration/headers/: index.html
contributing/: index.html
examples/: additional_claims.py  asymmetric.py  basic.py  csrf_protection_cookies.py  denylist.py  denylist_redis.py  dynamic_algorithm.py  freshness.py  generate_doc.py  jwt_in_cookies.py  optional.py  refresh.py  websocket.py  websocket_cookie.py
examples/multiple_files/: app.py
examples/multiple_files/routers/: items.py  users.py
fastapi_paseto_auth/: __init__.py  auth_config.py  auth_paseto.py  config.py  exceptions.py
release-notes/: index.html
search/: search_index.json
tests/: conftest.py  test_config.py  test_cookies.py  test_create_token.py  test_decode_token.py  test_denylist.py  test_headers.py  test_token_multiple_locations.py  test_url_protected.py  test_websocket.py
usage/basic/: index.html
usage/freshness/: index.html
usage/optional/: index.html
usage/refresh/: index.html
usage/revoking/: index.html
