[build-system]
requires = ["flit_core>=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fastapi_paseto_auth_v2"
dist-name = "fastapi-paseto-auth-v2"
author = "Neneko"
author-email = "fastapi@nyu.moe"
home-page = "https://github.com/yashram96/fastapi-paseto-auth"

classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

requires = [
  "fastapi>=0.65.3,<=0.112.0",
  "pyseto>=1.6.9,<=1.6.10",
  "pydantic>=1.9.1,<=2.8.2",
]

description-file = "README.md"
requires-python = ">=3.10"

[tool.flit.metadata.urls]
Documentation = "https://yashram.github.io/fastapi-paseto-auth-v2/"

[tool.flit.metadata.requires-extra]
test = [
  "pytest==7.1.3",
  "pytest-cov==3.0.0",
  "coveralls==3.3.1"
]

doc = [
  "mkdocs>=1.1.2,<2.0.0",
  "mkdocs-material>=8.3.9,<9.0.0",
  "markdown-include>=0.7.0,<0.8.0"
]

dev = [
  "uvicorn>=0.11.5"
]

